# RustyVision

./: Cargo.toml  PROJECT_PLAN.md  README.md
config/: default.toml
crates/vision-calibration/: Cargo.toml
crates/vision-calibration/src/: hsv_tuner.rs
crates/vision-core/: Cargo.toml
crates/vision-core/src/: camera.rs  config.rs  detection.rs  frame.rs  lib.rs  main.rs  streaming.rs
crates/vision-core/src/streaming/: image.rs  mod.rs  routes.rs  server.rs  state.rs  ui.rs
crates/vision-detection/: Cargo.toml
crates/vision-detection/src/: ball.rs  circle.rs  color.rs  contour.rs  lib.rs
crates/vision-nt/: Cargo.toml
