[workspace]
resolver = "2"
members = [
    "crates/vision-core",
    "crates/vision-detection",
    "crates/vision-nt",
    "crates/vision-calibration",
]

[workspace.dependencies]
image = "0.25.9"
minifb = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
