[package]
name = "vision-calibration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vision-calibration"
path = "src/hsv_tuner.rs"

[dependencies]
vision-core = { path = "../vision-core" }
ndarray = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
minifb = { workspace = true }
toml = "0.9"
nokhwa = {version="0.10.10", features=["input-native"]}
