[package]
name = "vision-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vision-core"
path = "src/main.rs"

[dependencies]
vision-detection = { path = "../vision-detection" }
vision-nt = { path = "../vision-nt" }
vision-calibration = { path = "../vision-calibration" }

ndarray = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
minifb = { workspace = true }
toml = "0.9"
nokhwa = {version="0.10.10", features=["input-native"]}
