[package]
name = "vision-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vision-core"
path = "src/main.rs"

[dependencies]
vision-detection = { path = "../vision-detection" }
vision-nt = { path = "../vision-nt" }

ndarray = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
minifb = { workspace = true }
toml = "0.9"
nokhwa = {version="0.10.10", features=["input-native"]}
anyhow = "1.0.100"
axum = "0.8.8"
bytes = "1.11.0"
tokio = {version = "1.49.0", features=["full"]}
tokio-stream = {version="0.1.18", features=["full"]}
