[package]
name = "vision-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vision-core"
path = "src/main.rs"

[dependencies]
vision-detection = { path = "../vision-detection" }
vision-nt = { path = "../vision-nt" }

ndarray = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }

toml = "0.9"
axum = "0.8.8"
bytes = "1.11.0"
image = "0.25.9"
anyhow = "1.0.100"
tokio = {version = "1.49.0", features=["full"]}
serde = { version = "1.0", features = ["derive"] }
tokio-stream = {version="0.1.18", features=["full"]}
nokhwa = {version="0.10.10", features=["input-native"]}
